fixed the close icon spacing, fixed modal padding

--- a/src/components/ApplyModal/ApplyModal.module.scss
+++ b/src/components/ApplyModal/ApplyModal.module.scss
@@ -6,8 +6,11 @@
 }
 
 .modalContainer {
-    padding: 24px;
     border-radius: 16px !important;
+}
+
+.closeIconContainer {
+    height: 72px;
 }
 
 .closeIcon {
@@ -61,5 +64,9 @@
 @media only screen and (min-width: 768px) {
     .modal {
         width: 80%;
+    }
+
+    .closeIconContainer {
+        height: 48px;
     }
 }
